# OpenCV-video

./: CMakeLists.txt  main.cpp
